[gd_scene load_steps=2 format=3 uid="uid://csj35bnbsac3r"]

[ext_resource type="Script" path="res://Scripts/network_ui.gd" id="1_tpdtl"]

[node name="NetworkUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tpdtl")

[node name="MainControlsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.5
offset_top = -139.5
offset_right = 256.5
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2

[node name="IP" type="LineEdit" parent="MainControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter IP "
alignment = 1

[node name="Name" type="LineEdit" parent="MainControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter Your Name"
alignment = 1

[node name="Host" type="Button" parent="MainControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Host"

[node name="Join" type="Button" parent="MainControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Join"

[node name="LobbyControlsContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.5
offset_top = -69.0
offset_right = 166.5
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LobbyControlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Waiting For Players...."
horizontal_alignment = 1

[node name="playersCount" type="Label" parent="LobbyControlsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyControlsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Start" type="Button" parent="LobbyControlsContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Start"

[node name="Exit" type="Button" parent="LobbyControlsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Exit"

[connection signal="pressed" from="MainControlsContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainControlsContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="LobbyControlsContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="LobbyControlsContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
